<resources>
    <string name="app_name">payscan</string>
    <string name="login_activity_title">LOGIN/REGISTER</string>
    <string name="email_field">Email</string>
    <string name="password_field">password</string>
    <string name="go">Go</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_charge_wallet">Charge Wallet</string>
    <string name="menu_transaction_history">Transaction history</string>
    <string name="menu_funding_history">Funding history</string>


    <string name="amount_label">Amount:</string>
    <string name="amount_placeholder">0.00</string>
    <string name="pay">Pay</string>
    <string name="receive">Receive</string>



    <string name="generate_qr">Generate QR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
