<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_charge"
                android:title="@string/menu_charge_wallet"/>
    </group>

    <item android:title="History">
        <menu>
            <item
                    android:id="@+id/nav_funding_history"
                    android:title="@string/menu_funding_history"/>
            <item
                    android:id="@+id/nav_transaction_history"
                    android:title="@string/menu_transaction_history"/>
        </menu>
    </item>

</menu>
