<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home">
    <TextView
            android:text="@string/amount_label"
            android:layout_width="97dp"
            android:layout_height="43dp" android:id="@+id/amount_label" android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintVertical_bias="0.044" android:textSize="24sp"/>
    <TextView
            android:text="@string/amount_placeholder"
            android:layout_width="89dp"
            android:layout_height="44dp" android:id="@+id/amount_placeholder" android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintVertical_bias="0.044" android:textSize="24sp"/>
    <Button
            android:text="@string/receive"
            android:layout_width="193dp"
            android:layout_height="68dp"
            android:id="@+id/receive_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.394" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:textSize="24sp"
            android:textColor="@color/colorWhite" android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" android:background="@color/colorPrimary"/>
    <Button
            android:text="@string/pay"
            android:layout_width="193dp"
            android:layout_height="68dp"
            android:id="@+id/pay_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.211" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:textSize="24sp"
            android:textColor="@color/colorWhite" android:textColorHighlight="@color/colorWhite"
            android:textColorHint="@color/colorWhite" android:background="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>